--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Never worry about forgetting things again.
 </section>
 
 <div class="content">
-	<section>
+	<!-- <section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can we <strong>double</strong> our sales revenue?</h2>
@@ -52,9 +52,9 @@ description: Never worry about forgetting things again.
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<section class="testimonial">
+	<!-- <section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
@@ -64,10 +64,9 @@ description: Never worry about forgetting things again.
 				</blockquote>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">New video series: Project of the Month, where I take a look at a great open source project and what it can do!<br>This month, probably the best native project / task management software available on <a href="https://twitter.com/hashtag/Linux?src=hash&amp;ref_src=twsrc%5Etfw">#Linux</a>: <a href="https://twitter.com/planner_todo?ref_src=twsrc%5Etfw">@planner_todo</a> <a href="https://t.co/oyKPDBC0OJ">https://t.co/oyKPDBC0OJ</a></p>&mdash; Nick @ The Linux Experiment (@thelinuxEXP) <a href="https://twitter.com/thelinuxEXP/status/1247170230008324097?ref_src=twsrc%5Etfw">April 6, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
 </div>
