--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@ description: Never worry about forgetting things again.
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable"><strong>Planner</strong></h1>
-		<p class="subtext editable">Never worry about forgetting things again.</p>
-		<p>
+		<p class="subtext editable">Never worry about forgetting things again 🚀</p>
+		<p style="margin-bottom: 0px;">
 			<a href="https://appcenter.elementary.io/com.github.alainm23.planner"><img class="appcenter" src="https://appcenter.elementary.io/badge.svg?new" alt="Get it on AppCenter" /></a>
-			<!-- <a href="https://flathub.org/apps/details/com.github.alainm23.planner"><img class="appcenter" alt="Download on Flathub" src="https://flathub.org/assets/badges/flathub-badge-en.png"/></a> -->
 			<a href='https://flathub.org/apps/details/com.github.alainm23.planner'><img class="flathub" width='240' alt='Download on Flathub' src='https://flathub.org/assets/badges/flathub-badge-en.png'/></a>
 		</p>
 		<div>
