Add Planner feactures

--- a/index.html
+++ b/index.html
@@ -17,41 +17,91 @@ description: Never worry about forgetting things again.
 </section>
 
 <div class="content">
-	<!-- <section>
+	<section>
 		<div class="container flex">
-			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
-			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/planner.png" alt="Planner Today" class="screenshot editable" />
+			</div>
+
+			<div class="text editable">
+				<h2>Organize <strong>Everything</strong> in Life</h2>
+				<p>We're a productive application that helps you achieve your goals.</p>
+				<p>Planner keeps track of all your tasks, projects, and goals in one beautifully simple place.</p>
 			</div>
 		</div>
 	</section>
 
 	<section>
 		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/PlannerTodoist.png" alt="Planner Todoist" class="screenshot editable" />
+			</div>
+			<div class="text editable">
+				<h2>Synchronize your tasks with <strong>Todoist</strong></h2>
+				<p>Planner is not limited to working locally, Synchronize your Todoist account and work with your Projects, Sections and Tasks directly from Planner.</p>
 			</div>
 		</div>
 	</section>
 
 	<section>
 		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/PlannerSections.png" alt="Planner Sections" class="screenshot editable" />
+			</div>
+
+			<div class="text editable">
+				<h2>Divide and Conquer your Projects with <strong>Sections</strong>.</h2>
+				<p>When you’re planning out a project, it’s easy to get overwhelmed by the sheer number of tasks involved. To make staying on track easier, split your project into <strong>Sections</strong> and take your tasks on in parts.</p>
 			</div>
 		</div>
-	</section> -->
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="image">
+				<img src="{{ site.baseurl }}/images/PlannerTask.png" alt="Planner Task" class="screenshot editable" />
+			</div>
+			<div class="text editable">
+				<h2><strong>Beautiful</strong> Tasks</h2>
+				<p>View your tasks elegantly, add notes, view URLs, create deadlines and add labels.</p>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="image">
+				<img src="{{ site.baseurl }}/images/CalendarEvents.png" alt="Planner Calendar Events" class="screenshot editable" />
+			</div>
+			<div class="text editable">
+				<h2>Calendar <strong>Events</strong></h2>
+				<p>You can connect your <b>Calendar</b> app to Planner to see your events and to-dos together in one place. You’ll see events from both personal and shared calendars in <b>Today</b> and <b>Upcoming</b>. This is useful when you’re managing your day, and as you plan the week ahead.</p>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="image">
+				<img src="{{ site.baseurl }}/images/PlannerToday.png" alt="Planner Calendar Events" class="screenshot editable" />
+			</div>
+			
+			<div class="text editable">
+				<h2>A few more things…</h2>
+				<p>There’s so much to enjoy in Planer. Here are a few more little touches we think you’re going to love:</p>
+				<ul class="list">
+					<li>🚀️ Complete redesign of the UI.</li>
+					<li>🏅️ New icon.</li>
+					<li>🤚️ Drag and Order arrived: Sort your tasks wherever you want.</li>
+					<li>💯️ Progress indicator for each project.</li>
+					<li>💎️ Magic Button arrived: Drag and Drop and create your tasks wherever you want.</li>
+					<li>⏰️ Improved reminder system, now you can create one or more reminders, you decide.</li>
+					<li>🌙️ Better integration with the dark theme.</li>
+					<li>🎉️ and much more.</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 
 	<!-- <section class="testimonial">
 		<div class="container flex">
@@ -65,7 +115,7 @@ description: Never worry about forgetting things again.
 		</div>
 	</section> -->
 
-	<section class="bottom-cta">
+	<section class="bottom-cta testimonial">
 		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">New video series: Project of the Month, where I take a look at a great open source project and what it can do!<br>This month, probably the best native project / task management software available on <a href="https://twitter.com/hashtag/Linux?src=hash&amp;ref_src=twsrc%5Etfw">#Linux</a>: <a href="https://twitter.com/planner_todo?ref_src=twsrc%5Etfw">@planner_todo</a> <a href="https://t.co/oyKPDBC0OJ">https://t.co/oyKPDBC0OJ</a></p>&mdash; Nick @ The Linux Experiment (@thelinuxEXP) <a href="https://twitter.com/thelinuxEXP/status/1247170230008324097?ref_src=twsrc%5Etfw">April 6, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</section>
 </div>
