Add Planner feactures

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ description: Never worry about forgetting things again.
 			<div class="text editable">
 				<h2>Synchronize your tasks with <strong>Todoist</strong></h2>
 				<p>Planner is not limited to working locally, Synchronize your Todoist account and work with your Projects, Sections and Tasks directly from Planner.</p>
+				<p><small>* Planner not created by, affiliated with, or supported by Doist</small></p>
 			</div>
 		</div>
 	</section>
