--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 ---
-title: Support Planner
+title: Funding
 description: Planner is being developed with ❤️ and passion for Open Source. However, if you like Planner and want to support its development, consider donating to via
 ---
 <h3>Patreon</h3>
