--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ description: Never worry about forgetting things again.
 			
 			<div class="text editable">
 				<h2>A few more things…</h2>
-				<p>There’s so much to enjoy in Planer. Here are a few more little touches we think you’re going to love:</p>
+				<p>There’s so much to enjoy in Planner. Here are a few more little touches we think you’re going to love:</p>
 				<ul class="list">
 					<li>🚀️ Complete redesign of the UI.</li>
 					<li>🏅️ New icon.</li>
