--- a/support.html
+++ b/support.html
@@ -3,24 +3,64 @@ title: Funding
 description: Planner is being developed with ❤️ and passion for Open Source. However, if you like Planner and want to support its development, consider donating to via
 ---
 <h3>Patreon</h3>
-<a style="text-align: center;" href="https://www.patreon.com/bePatron?u=9856296" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+<a style="text-align: center;" href="https://www.patreon.com/alainm23" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 <h3>PayPal</h3>
 Use <a href="https://www.paypal.me/alainm23">PayPal.me</a>, or send to alainhuntt@gmail.com
+<h3>Liberapay</h3>
+Use <a href="https://liberapay.com/Alain/">Liberapay</a>.
 
-<h3>Thanks to them who made a donation via Patreon or PayPal.</h3>
+<h3>Thanks to them who made a donation via Patreon or PayPal</h3>
 <ul>
+    <li>Aleksandar Micanovic</li>
+    <li>Alonso Montenegro Morelos</li>
+    <li>Alvan Rahimli</li>
+    <li>Aly Abdulatif</li>
+    <li>Astor Castelo</li>
+    <li>Brian Reachard</li>
+    <li>Brian Stinson</li>
+    <li>Brice Martin</li>
+    <li>Callum Hutchinson</li>
+    <li>Carlos Flores Soto</li>
     <li>Cassidy James</li>
-    <li>Wout</li>
-    <li>The Linux Experiment</li>
-    <li>William Tumeo</li>
-    <li>Cal</li>
-    <li>Coryn</li>
-    <li>Marco Bluethgen</li>
-    <li>Luke Gaudreau</li>
-    <li>I Sutter</li>
-    <li>M</li>
-    <li>James</li>
-    <li>Sampath Rajapakse</li>
+    <li>Darshak Parikh</li>
+    <li>Darshak Parikh</li>
+    <li>Dominic Corriveau</li>
+    <li>Dung Nguyen</li>
+    <li>Edwin Van de Ven</li>
+    <li>Emil Nilsson</li>
+    <li>Ernie Hutschemaekers</li>
+    <li>Felix Günther</li>
+    <li>Florian Neumann</li>
+    <li>Gonçalo Silva</li>
+    <li>Goochelaar Peter</li>
+    <li>Jeremiah C. Foster</li>
+    <li>Jochen Breuer</li>
+    <li>Jonathan Klimt</li>
     <li>Kyle Riedemann</li>
-    <li>Richard Prammer</li>    
+    <li>Laurens Priem</li>
+    <li>Long Nguyen</li>
+    <li>Markwart Von Bonin</li>
+    <li>Martino Roma</li>
+    <li>Matthias Siewert</li>
+    <li>Nicholas Linney</li>
+    <li>Oskar Schachtschneider</li>
+    <li>Otto Hakstetter</li>
+    <li>Pavel Dolinin</li>
+    <li>Pearson Pryce</li>
+    <li>Ramiro Cantu</li>
+    <li>Richard Prammer</li>
+    <li>Robert Zelnik</li>
+    <li>Roman Schaller</li>
+    <li>Ross McLean</li>
+    <li>Ru Singh</li>
+    <li>Sam Muirhead</li>
+    <li>sirga784</li>
+    <li>Stan Janssen</li>
+    <li>Stefan Berggren</li>
+    <li>Taylor Conroy</li>
+    <li>The Linux Experiment</li>
+    <li>vjxyz</li>
+    <li>Wolf Vollprecht</li>
+    <li>Ye Yang</li>
+    <li>Zan Cerne</li>
 </ul>
