--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@ title: Funding
 description: Planner is being developed with ❤️ and passion for Open Source. However, if you like Planner and want to support its development, consider donating to via
 ---
 <h3>Patreon</h3>
-<a style="text-align: center;" href="https://www.patreon.com/alainm23" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+<a style="text-align: center;" href="https://www.patreon.com/bePatron?u=9856296" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 <h3>PayPal</h3>
 Use <a href="https://www.paypal.me/alainm23">PayPal.me</a>, or send to alainhuntt@gmail.com
 <h3>Liberapay</h3>
