--- a/support.html
+++ b/support.html
@@ -8,6 +8,8 @@ description: Planner is being developed with ❤️ and passion for Open Source.
 Use <a href="https://www.paypal.me/alainm23">PayPal.me</a>, or send to alainhuntt@gmail.com
 <h3>Liberapay</h3>
 Use <a href="https://liberapay.com/Alain/">Liberapay</a>.
+<h3>Ko-fi</h3>
+Use <a href="https://ko-fi.com/alainm23">Ko-fi</a>.
 
 <h3>Thanks to them who made a donation via Patreon or PayPal</h3>
 <ul>
@@ -16,6 +18,7 @@ Use <a href="https://liberapay.com/Alain/">Liberapay</a>.
     <li>Alvan Rahimli</li>
     <li>Aly Abdulatif</li>
     <li>Astor Castelo</li>
+    <li>BeatLink</li>
     <li>Brian Reachard</li>
     <li>Brian Stinson</li>
     <li>Brice Martin</li>
@@ -46,7 +49,6 @@ Use <a href="https://liberapay.com/Alain/">Liberapay</a>.
     <li>Oskar Schachtschneider</li>
     <li>Otto Hakstetter</li>
     <li>Pavel Dolinin</li>
-    <li>Pearson Pryce</li>
     <li>Ramiro Cantu</li>
     <li>Richard Prammer</li>
     <li>Robert Zelnik</li>
